--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MONGO_DB_URI = 
+MONGO_DB_URI = mongodb+srv://adminbd:qwerty123.@clusterbd.wuzae2s.mongodb.net/?retryWrites=true&w=majority
 PORT = 5000
